:test_tube: Unit testing with jest

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
     "expect": true,
     "sinon": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "plugins": [
     "react",
     "jsx-a11y",
